--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,6 +1,11 @@
-@import "bootstrap-sprockets";
-//@import "font-awesome-sprockets"; // scss commented out and stylesheet included in application.html.erb because font files aren't coming through in production
-//@import "font-awesome";
-@import "partials/variables";
-@import "bootstrap";
-@import "partials/global";
+@import 'partials/variables';
+@import 'partials/mixins';
+@import 'vendor/normalize';
+@import 'partials/typography';
+@import 'partials/icons';
+@import 'partials/global';
+@import 'partials/header';
+@import 'partials/nav';
+@import 'partials/content';
+@import 'partials/buttons';
+@import 'partials/forms';
