--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,9 @@
 <header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6 col-sm-offset-3 text-center">
-				<a href="<% if user_signed_in? %>/<% else %>https://seferdesign.com<% end %>"><img src="<%= company[:logo][:alt] %>" alt="<%= company[:full_name] %>"></a>
-			</div>
-		</div>
+	<div class="logo-wrap">
+		<a class="logo" href="<% if user_signed_in? %>/<% else %>https://seferdesign.com<% end %>"><img src="<%= company[:logo][:alt] %>" alt="<%= company[:full_name] %>"></a>
+	</div>
+	<div class="search-bar">
+		<i class="fas fa-search"></i>
+		<input type="search" placeholder="Search for clients, vendors, goals, etc.">
 	</div>
 </header>
