--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,54 +1,3 @@
-<% provide(:title, '') %>
-<section id="home">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<div class="row">
-					<div class="col-md-offset-2 col-md-4 col-sm-6">
-            <div class="row">
-              <div class="col-xs-10">
-                <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'address-book', class: 'left') %>Clients<% end %>
-              </div>
-              <div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_client_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'plus') %><% end %>
-              </div>
-            </div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="row">
-              <div class="col-xs-10">
-								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'dollar-sign', class: 'left') %>Invoices<% end %>
-							</div>
-							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_invoice_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'plus') %><% end %>
-              </div>
-						</div>
-					</div>
-					<div class="col-md-12"><hr></div>
-					<div class="col-md-offset-2 col-md-4 col-sm-6">
-						<div class="row">
-              <div class="col-xs-10">
-								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
-							</div>
-							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'plus') %><% end %>
-              </div>
-						</div>
-					</div>
-					<div class="col-md-4 col-sm-6">
-						<div class="row">
-              <div class="col-xs-10">
-								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('far', 'credit-card', class: 'left') %>Expenses<% end %>
-							</div>
-							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_expense_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('fas', 'plus') %><% end %>
-              </div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<hr>
-		<%= render 'layouts/financialdash' %>
-	</div>
-</section>
+<% provide(:title, 'Dashboard') %>
+<h1><i class="fas fa-fw fa-home left"></i>Dashboard</h1>
+<%= render 'layouts/financialdash' %>
