--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -7,5 +7,6 @@
 @import 'partials/header';
 @import 'partials/nav';
 @import 'partials/content';
+@import 'partials/panels';
 @import 'partials/buttons';
 @import 'partials/forms';
