--- a/app/views/expenses/edit.html.erb
+++ b/app/views/expenses/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Edit Expense ##{@expense.id} | ") %>
+<% provide(:title, "Edit Expense ##{@expense.id}") %>
 <section id="expense-edit">
 	<div class="container">
 		<div class="row">
