--- a/app/views/invoices/email.html.erb
+++ b/app/views/invoices/email.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Invoice ##{@invoice.id} | ") %>
+<% provide(:title, "Invoice ##{@invoice.id}") %>
 <section id="invoice-email">
 	<div class="container">
 		<div class="row">
