--- a/app/views/invoices/stripe.html.erb
+++ b/app/views/invoices/stripe.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Stripe Payment | ") %>
+<% provide(:title, "Stripe Payment") %>
 <section id="invoice-stripe-payment">
 	<div class="container">
 		<div class="row">
