--- a/app/views/time/index.html.erb
+++ b/app/views/time/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Time | ') %>
+<% provide(:title, 'Time') %>
 <section id="invoices-time">
 	<div class="container">
 		<div class="row">
