--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Years | ') %>
+<% provide(:title, 'Years') %>
 <section id="years-list">
 	<div class="container">
 		<div class="row">
