--- a/app/views/years/new.html.erb
+++ b/app/views/years/new.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'New Year | ') %>
+<% provide(:title, 'New Year') %>
 <section id="year-new">
 	<div class="container">
 		<div class="row">
