--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Year #{@year.year} | ") %>
+<% provide(:title, "Year #{@year.year}") %>
 <section id="year<%= @year.year %>" class="yearsummary">
 	<div class="container">
 		<div class="row">
