--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -1,5 +1,8 @@
 header {
 
+	z-index: 99;
+	position: sticky;
+	top: 0px;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
@@ -8,6 +11,7 @@ header {
 	background: $blue;
 
 	.logo-wrap {
+
 		padding: 0px 1.5rem;
 		flex-basis: $nav-width;
 
