--- a/app/assets/stylesheets/partials/_icons.scss
+++ b/app/assets/stylesheets/partials/_icons.scss
@@ -12,4 +12,10 @@ i[class^="fa"] {
 		transform: translate(0px, -5%);
 	}
 
+	h1 & {
+		display: inline-block;
+		font-size: 0.875em;
+		// transform: scale(0.875);
+	}
+
 }
