--- a/app/assets/stylesheets/partials/_typography.scss
+++ b/app/assets/stylesheets/partials/_typography.scss
@@ -3,6 +3,15 @@ body {
 	font-family: $font-main;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0px 0px 1.5rem;
+}
+
 h1 {
 
 	font-size: 2.2rem;
@@ -10,6 +19,10 @@ h1 {
 	a {
 		color: inherit;
 		text-decoration: none;
+	}
+
+	i[class^="fa"] {
+		color: $color-primary;
 	}
 
 }
