--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for @client, :html => { :multipart => true } do |f| %>
 	<% if @client.errors.any? %>
-	<div id="error_explanation">
+	<div class="error_explanation">
 		<h2><%= pluralize(@client.errors.count, "error") %> prohibited this client from being saved:</h2>
 		<ul>
 			<% @client.errors.full_messages.each do |msg| %>
@@ -9,148 +9,108 @@
 		</ul>
 	</div>
 	<% end %>
-	<div class="row">
-		<div class="col-sm-12">
-			<div class="form-group">
+	<div class="form-section panel">
+		<div class="form-description">
+			Basic Info
+		</div>
+		<div class="form-elements">
+			<div class="form-element form-element-radio-wrap full">
 				<%= check_box(:client, :active, {}, 'true', 'false') %>
 				<%= f.label :active, 'Active?' %>
 				<%= check_box(:client, :international, {}, 'true', 'false') %>
 				<%= f.label :international, 'International?' %>
 			</div>
-		</div>
-		<div class="col-sm-12">
-			<div class="row">
-				<div class="col-sm-4">
-					<div class="form-group">
-						<%= f.label :name %>
-						<%= f.text_field :name, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<%= f.label :contact %>
-						<%= f.text_field :contact, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<%= f.label :site_url, 'Site' %>
-						<%= f.text_field :site_url, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-12">
-					<hr>
-				</div>
-				<div class="col-sm-2">
-					<div class="form-group">
-						<%= f.label :address1, 'Address' %>
-						<%= f.text_field :address1, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-2">
-					<div class="form-group">
-						<%= f.label :address2, 'Address 2' %>
-						<%= f.text_field :address2, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-4">
-					<div class="form-group">
-						<%= f.label :city, 'City' %>
-						<%= f.text_field :city, class: 'form-control' %>
-					</div>
-				</div>
-				<div class="col-sm-2">
-					<div class="form-group">
-						<%= f.label :state, 'State' %>
-						<%= select(:client, 'state', us_states, { :include_blank => 'None' }, { :class => 'form-control' } ) %>
-					</div>
-				</div>
-				<div class="col-sm-2">
-					<div class="form-group">
-						<%= f.label :zipcode, 'Zipcode' %>
-						<%= f.text_field :zipcode, class: 'form-control' %>
-					</div>
-				</div>
-				<% if @client.international %>
-				<div class="col-sm-12">
-					<div class="form-group">
-						<%= f.label :intinfo, 'International Info' %>
-						<%= f.text_field :intinfo, class: 'form-control' %>
-					</div>
-				</div>
-				<% end %>
-				<div class="col-sm-12">
-					<hr>
-				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<%= f.label :email_accounting, 'Accounting Email' %>
-								<%= f.text_field :email_accounting, class: 'form-control' %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group">
-								<%= f.label :email_accounting_2, 'Accounting 2' %>
-								<%= f.text_field :email_accounting_2, class: 'form-control' %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group">
-								<%= f.label :email_accounting_3, 'Accounting 3' %>
-								<%= f.text_field :email_accounting_3, class: 'form-control' %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group">
-								<%= f.label :preferred_paymenttype, 'Preferred Payment' %>
-								<%= select(:client, 'preferred_paymenttype', payment_types, { :include_blank => 'None' }, { :class => 'form-control' }) %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group">
-								<%= f.label :currentrate, 'Hourly Rate' %>
-								<%= f.number_field :currentrate, class: 'form-control' %>
-							</div>
-						</div>
-						<div class="col-sm-12">
-							<div class="form-group">
-								<%= f.label :federalein, 'Federal EIN' %>
-								<%= f.text_field :federalein, class: 'form-control' %>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-sm-12 visible-xs visible-sm">
-					<hr>
-				</div>
-				<div class="col-md-6">
-					<div class="row">
-						<div class="col-sm-12">
-							<div class="form-group">
-								<%= f.label :gsheet_id, 'Google Sheet ID' %>
-								<%= f.text_field :gsheet_id, class: 'form-control' %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<div class="form-group">
-								<%= f.label :logo, 'Logo' %>
-								<%= f.file_field :logo %>
-							</div>
-						</div>
-						<div class="col-sm-6">
-							<% if !@client.logo.blank? %>
-							<div class="clientimage"><%= image_tag(@client.logo.url) %></div>
-							<% end %>
-						</div>
-					</div>
-				</div>
+			<div class="form-element full">
+				<%= f.label :name %>
+				<%= f.text_field :name %>
+			</div>
+			<div class="form-element">
+				<%= f.label :contact %>
+				<%= f.text_field :contact %>
+			</div>
+			<div class="form-element">
+				<%= f.label :site_url, 'Site' %>
+				<%= f.text_field :site_url %>
 			</div>
 		</div>
 	</div>
-	<hr>
-	<div class="form-group">
-		<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
+	<div class="form-section panel">
+		<div class="form-description">
+			Address
+		</div>
+		<div class="form-elements">
+			<div class="form-element">
+				<%= f.label :address1, 'Address' %>
+				<%= f.text_field :address1 %>
+			</div>
+			<div class="form-element">
+				<%= f.label :address2, 'Address 2' %>
+				<%= f.text_field :address2 %>
+			</div>
+			<div class="form-element full">
+				<%= f.label :city, 'City' %>
+				<%= f.text_field :city %>
+			</div>
+			<div class="form-element">
+				<%= f.label :state, 'State' %>
+				<%= select(:client, 'state', us_states, { :include_blank => 'None' }) %>
+			</div>
+			<div class="form-element">
+				<%= f.label :zipcode, 'Zipcode' %>
+				<%= f.text_field :zipcode %>
+			</div>
+			<% if @client.international %>
+			<div class="form-element full">
+				<%= f.label :intinfo, 'International Info' %>
+				<%= f.text_field :intinfo %>
+			</div>
+			<% end %>
+		</div>
 	</div>
+	<div class="form-section panel">
+		<div class="form-description">
+			Accounting
+		</div>
+		<div class="form-elements">
+			<div class="form-element full">
+				<%= f.label :email_accounting, 'Accounting Email' %>
+				<%= f.email_field :email_accounting %>
+			</div>
+			<div class="form-element">
+				<%= f.label :email_accounting_2, 'Email 2' %>
+				<%= f.email_field :email_accounting_2 %>
+			</div>
+			<div class="form-element">
+				<%= f.label :email_accounting_3, 'Email 3' %>
+				<%= f.email_field :email_accounting_3 %>
+			</div>
+			<div class="form-element">
+				<%= f.label :preferred_paymenttype, 'Preferred Payment' %>
+				<%= select(:client, 'preferred_paymenttype', payment_types, { :include_blank => 'None' }) %>
+			</div>
+			<div class="form-element">
+				<%= f.label :currentrate, 'Hourly Rate' %>
+				<%= f.number_field :currentrate %>
+			</div>
+			<div class="form-element full">
+				<%= f.label :federalein, 'Federal EIN' %>
+				<%= f.text_field :federalein %>
+			</div>
+		</div>
+	</div>
+	<div class="form-section panel">
+		<div class="form-description">
+			Logo
+		</div>
+		<div class="form-elements">
+			<div class="form-element full">
+				<%= f.label :logo, 'Logo' %>
+				<%= f.file_field :logo %>
+				<% if !@client.logo.blank? %>
+				<div class="clientimage"><%= image_tag(@client.logo.url) %></div>
+				<% end %>
+			</div>
+		</div>
+	</div>
+	<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 <% end %>
