--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,12 +1,3 @@
-<% provide(:title, "Edit Client ##{@client.id} | ") %>
-<section id="client-edit">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>Edit Client #<%= @client.id %></h1>
-				<%= render 'form' %>
-				<p><%= link_to 'Back', clients_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+<% provide(:title, "Edit Client #{@client.name}") %>
+<h1><%= icon('fas', 'user', class: 'fa-fw left') %>Edit <%= @client.name %></h1>
+<%= render 'form' %>
