--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,12 +1,3 @@
-<% provide(:title, 'New Client | ') %>
-<section id="client-new">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>New Client</h1>
-				<%= render 'form' %>
-				<p><%= link_to 'Back', clients_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+<% provide(:title, 'New Client') %>
+<h1><%= icon('fas', 'user', class: 'fa-fw left') %>New Client</h1>
+<%= render 'form' %>
