--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,148 +1,120 @@
-<% provide(:title, "Client ##{@client.id} | ") %>
-<section id="client-show">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<% if !@client.logo.blank? %>
-				<%= image_tag(@client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
-				<% end %>
-				<h1><%= @client.name %></h1>
-				<p class="doicons">
-					<%= link_to edit_client_path(@client), title: 'Edit' do %><%= icon_action_edit %><% end %>
-					<%= link_to client_path(@client), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Client ##{@client.id}?" } do %><%= icon_action_delete %><% end %>
-				</p>
-				<p>
-					<strong>Client ID:</strong>
-					<%= @client.id %>
-				</p>
-				<p>
-					<strong>Contact:</strong>
-					<%= @client.contact %>
-				</p>
-				<% if !@client.email_accounting.blank? %>
-				<p>
-					<strong>Accounting Email(s):</strong><br>
-					<%= @client.email_accounting %><% if @client.email_accounting_2.present? %>, <%= @client.email_accounting_2 %><% end %><% if @client.email_accounting_3.present? %>, <%= @client.email_accounting_3 %><% end %>
-				</p>
-				<% end %>
-				<% if !@client.site_url.blank? %>
-				<p>
-					<strong>Site:</strong>
-					<a href="<%= @client.site_url %>" title="<%= @client.site_url %>"><%= @client.site_url %></a>
-				</p>
-				<% end %>
-				<% if !@client.address1.blank? %>
-				<p><strong>Address:</strong></p>
-				<p>
-					<%= @client.address1 %>
-					<% if !@client.address2.blank? %>
-					<br><%= @client.address2 %>
-					<% end %>
-					<br><%= @client.city %><% if !@client.state.blank? %>, <%= @client.state %><% end %> <%= @client.zipcode %>
-					<% if !@client.intinfo.blank? %>
-					<br><%= @client.intinfo %>
-					<% end %>
-				<% end %>
-				<% if @client.international %>
-				<p><strong><%= icon('fas', 'globe', class: 'left') %>International Client</strong></p>
-				<% end %>
-				<% if !@client.federalein.blank? %>
-				<p><strong>Federal EIN:</strong> <%= @client.federalein %></p>
-				<% end %>
-				<% if !@client.currentrate.blank? %>
-				<p>
-					<strong>Current Hourly Rate:</strong><br>
-					<%= number_to_currency(@client.currentrate) %>
-				</p>
-				<% end %>
-			</div>
-			<% if @client.gsheet_id.present? %>
-			<div class="col-sm-12">
-				<iframe class="ghseet-embed" src="https://docs.google.com/spreadsheets/d/<%= @client.gsheet_id %>/edit"></iframe>
-			</div>
+<% provide(:title, "Client ##{@client.id}") %>
+<% if !@client.logo.blank? %>
+<%= image_tag(@client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
+<% end %>
+<h1><%= icon('fas', 'user', class: 'fa-fw left') %><%= @client.name %></h1>
+<p class="doicons">
+	<%= link_to edit_client_path(@client), title: 'Edit' do %><%= icon_action_edit %><% end %>
+	<%= link_to client_path(@client), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Client ##{@client.id}?" } do %><%= icon_action_delete %><% end %>
+</p>
+<div class="panel">
+	<p>
+		<strong>Client ID:</strong>
+		<%= @client.id %>
+	</p>
+	<p>
+		<strong>Contact:</strong>
+		<%= @client.contact %>
+	</p>
+	<% if !@client.email_accounting.blank? %>
+	<p>
+		<strong>Accounting Email(s):</strong><br>
+		<%= @client.email_accounting %><% if @client.email_accounting_2.present? %>, <%= @client.email_accounting_2 %><% end %><% if @client.email_accounting_3.present? %>, <%= @client.email_accounting_3 %><% end %>
+	</p>
+	<% end %>
+	<% if !@client.site_url.blank? %>
+	<p>
+		<strong>Site:</strong>
+		<a href="<%= @client.site_url %>" title="<%= @client.site_url %>"><%= @client.site_url %></a>
+	</p>
+	<% end %>
+	<% if !@client.address1.blank? %>
+	<p><strong>Address:</strong></p>
+	<p>
+		<%= @client.address1 %>
+		<% if !@client.address2.blank? %>
+		<br><%= @client.address2 %>
+		<% end %>
+		<br><%= @client.city %><% if !@client.state.blank? %>, <%= @client.state %><% end %> <%= @client.zipcode %>
+		<% if !@client.intinfo.blank? %>
+		<br><%= @client.intinfo %>
+		<% end %>
+	<% end %>
+	<% if @client.international %>
+	<p><strong><%= icon('fas', 'globe', class: 'left') %>International Client</strong></p>
+	<% end %>
+	<% if !@client.federalein.blank? %>
+	<p><strong>Federal EIN:</strong> <%= @client.federalein %></p>
+	<% end %>
+	<% if !@client.currentrate.blank? %>
+	<p>
+		<strong>Current Hourly Rate:</strong><br>
+		<%= number_to_currency(@client.currentrate) %>
+	</p>
+	<% end %>
+	<h3>Invoices</h3>
+	<p><%= link_to new_invoice_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><%= icon('fas', 'plus', class: 'left') %>New Invoice<% end %></p>
+	<% if @client.invoices.blank? %>
+	<p class="lead">No invoices.</p>
+	<% else %>
+	<h4>Paid By Year</h4>
+	<table>
+		<thead>
+			<tr>
+				<th>Year</th>
+				<th>&nbsp;</th>
+				<th class="text-right">Total Paid</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% Year.order('year DESC').each do |year|
+				if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
+			%>
+			<tr>
+				<td><%= link_to year do %><%= year.year %><% end %></td>
+				<td>&nbsp;</td>
+				<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
+			</tr>
+			<% end end %>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td>&nbsp;</td>
+				<td class="text-right"><strong>Total</strong></td>
+				<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+			</tr>
+		</tfoot>
+	</table>
+	<h4>All</h4>
+	<table>
+		<thead>
+			<tr>
+				<th>Date Sent</th>
+				<th>&nbsp;</th>
+				<th>ID</th>
+				<th class="text-right">Cost</th>
+				<th class="text-center">Date Paid</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @client.invoices.each do |invoice| %>
+			<tr id="invoicerow<%= invoice.id %>">
+				<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+				<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
+				<td><%= invoice.display_id %></td>
+				<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+				<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
+			</tr>
 			<% end %>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<h3>Invoices</h3>
-				<p><%= link_to new_invoice_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><%= icon('fas', 'plus', class: 'left') %>New Invoice<% end %></p>
-				<% if @client.invoices.blank? %>
-				<p class="lead">No invoices.</p>
-				<% else %>
-				<div class="row">
-					<div class="col-sm-6">
-						<h4>Paid By Year</h4>
-						<table class="table table-hover table-striped table-condensed">
-							<thead>
-								<tr>
-									<th>Year</th>
-									<th>&nbsp;</th>
-									<th class="text-right">Total Paid</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% Year.order('year DESC').each do |year|
-									if Invoice.paidByYear(year.year).where(:client_id => @client.id).length > 0
-								%>
-								<tr>
-									<td><%= link_to year do %><%= year.year %><% end %></td>
-									<td>&nbsp;</td>
-									<td class="currency text-right"><%= number_to_currency(Invoice.paidByYear(year.year).where(:client_id => @client.id).sum(:cost), { :negative_format => '(%n)' }) %></td>
-								</tr>
-								<% end end %>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td>&nbsp;</td>
-									<td class="text-right"><strong>Total</strong></td>
-									<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-12">
-						<h4>All</h4>
-						<table class="table table-hover table-striped table-condensed">
-							<thead>
-								<tr>
-									<th>Date Sent</th>
-									<th>&nbsp;</th>
-									<th>ID</th>
-									<th class="text-right">Cost</th>
-									<th class="text-center">Date Paid</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% @client.invoices.each do |invoice| %>
-								<tr id="invoicerow<%= invoice.id %>">
-									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
-									<td><%= invoice.display_id %></td>
-									<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-									<td class="text-center"><% if invoice.paid == true %><span class="green"><%= invoice.paiddate %></span><% else %><span class="spread red">Not Paid</span><% end %></td>
-								</tr>
-								<% end %>
-							</tbody>
-							<tfoot>
-								<tr>
-									<td colspan="2">&nbsp;</td>
-									<td class="text-right"><strong>Total</strong></td>
-									<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
-									<td>&nbsp;</td>
-								</tr>
-							</tfoot>
-						</table>
-					</div>
-				</div>
-				<% end %>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-sm-12">
-				<p><%= link_to 'Back', clients_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+		</tbody>
+		<tfoot>
+			<tr>
+				<td colspan="2">&nbsp;</td>
+				<td class="text-right"><strong>Total</strong></td>
+				<td class="currency text-right"><strong><%= number_to_currency(@client.invoiceTotal, { :negative_format => '(%n)' }) %></strong></td>
+				<td>&nbsp;</td>
+			</tr>
+		</tfoot>
+	</table>
+	<% end %>
+</div>
