--- a/app/views/expenses/index.html.erb
+++ b/app/views/expenses/index.html.erb
@@ -1,44 +1,34 @@
-<% provide(:title, 'Expenses | ') %>
-<section id="expenses-list">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1><% if params[:future] == 'true' %>Future<% elsif params[:inactive] == 'true' %>All Past<% else %>Recent<% end %> Expenses</h1>
-				<% if params[:future] == 'true' or params[:inactive] == 'true' %>
-				<p><%= link_to 'Recent Expenses', expenses_path %></p>
-				<% else %>
-				<p><%= link_to 'All Past Expenses', expenses_path(:inactive => 'true') %> &bull; <%= link_to 'Future Expenses', expenses_path(:future => 'true') %></p>
-				<% end %>
-				<p><%= link_to new_expense_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Expense<% end %> <%= link_to new_bulk_expenses_path, { :class => 'btn btn-danger' } do %><%= icon('fas', 'plus', class: 'left') %>Add Bulk Expenses<% end %></p>
-				<% if @expenses.blank? %>
-				<p class="lead">No expenses.</p>
-				<% else %>
-				<div class="row">
-					<div class="col-sm-12">
-						<table class="table table-hover table-striped table-condensed">
-							<thead>
-								<tr>
-									<th>Date</th>
-									<th>Vendor</th>
-									<th class="hidden-xs">Name</th>
-									<th class="text-right">Cost</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% @expenses.sort { |a,b| b.date <=> a.date }.each do |expense| %>
-								<tr id="expenserow<%= expense.id %>">
-									<td><%= link_to expense do %><%= expense.date %><% end %></td>
-									<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
-									<td class="hidden-xs"><%= expense.name %></td>
-									<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
-								</tr>
-								<% end %>
-							</tbody>
-						</table>
-					</div>
-				</div>
-				<% end %>
-			</div>
-		</div>
-	</div>
-</section>
+<% provide(:title, 'Expenses') %>
+<h1><%= icon('far', 'credit-card', class: 'fa-fw left') %><% if params[:future] == 'true' %>Future<% elsif params[:inactive] == 'true' %>All Past<% else %>Recent<% end %> Expenses</h1>
+<% if params[:future] == 'true' or params[:inactive] == 'true' %>
+<p><%= link_to 'Recent Expenses', expenses_path %></p>
+<% else %>
+<p><%= link_to 'All Past Expenses', expenses_path(:inactive => 'true') %> &bull; <%= link_to 'Future Expenses', expenses_path(:future => 'true') %></p>
+<% end %>
+<p><%= link_to new_expense_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Expense<% end %> <%= link_to new_bulk_expenses_path, { :class => 'btn btn-danger' } do %><%= icon('fas', 'plus', class: 'left') %>Add Bulk Expenses<% end %></p>
+<div class="panel">
+	<% if @expenses.blank? %>
+	<p class="lead">No expenses.</p>
+	<% else %>
+	<table>
+		<thead>
+			<tr>
+				<th>Date</th>
+				<th>Vendor</th>
+				<th class="hidden-xs">Name</th>
+				<th class="text-right">Cost</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @expenses.sort { |a,b| b.date <=> a.date }.each do |expense| %>
+			<tr>
+				<td><%= link_to expense do %><%= expense.date %><% end %></td>
+				<td><%= link_to expense.vendor do %><%= expense.vendor.name %><% end %></td>
+				<td class="hidden-xs"><%= expense.name %></td>
+				<td class="currency text-right"><%= number_to_currency(expense.cost, { :negative_format => '(%n)' }) %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+	<% end %>
+</div>
