--- a/app/views/expenses/new.html.erb
+++ b/app/views/expenses/new.html.erb
@@ -1,12 +1,3 @@
-<% provide(:title, 'New Expense | ') %>
-<section id="expense-new">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>New Expense</h1>
-				<%= render 'form' %>
-				<p><%= link_to 'Back', expenses_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+<% provide(:title, 'New Expense') %>
+<h1><%= icon('far', 'credit-card', class: 'fa-fw left') %>New Expense</h1>
+<%= render 'form' %>
