--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -1,20 +1,14 @@
-<% provide(:title, "Expense ##{@expense.id} | ") %>
-<section id="expense-show">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>Expense #<%= @expense.id %></h1>
-				<p class="doicons">
-					<%= link_to edit_expense_path, title: 'Edit' do %><%= icon_action_edit %><% end %>
-					<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><%= icon_action_delete %><% end %>
-				</p>
-				<p><strong>Name:</strong> <%= @expense.name %></p>
-				<p><strong>Vendor:</strong> <%= link_to @expense.vendor do %><%= @expense.vendor.name %><% end %></p>
-				<p><strong>Date:</strong> <%= @expense.date %></p>
-				<p><strong>Cost:</strong> <span class="currency"><%= number_to_currency(@expense.cost, { :negative_format => '(%n)' }) %></span></p>
-				<p><strong>Account:</strong> <%= @expense.account %></p>
-				<% if !@expense.notes.empty? %><p><strong>Notes:</strong> <%= @expense.notes %></p><% end %>
-      </div>
-    </div>
-  </div>
-</section>
+<% provide(:title, "Expense ##{@expense.id}") %>
+<h1><%= icon('far', 'credit-card', class: 'fa-fw left') %>Expense #<%= @expense.id %></h1>
+<p class="doicons">
+	<%= link_to edit_expense_path, title: 'Edit' do %><%= icon_action_edit %><% end %>
+	<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><%= icon_action_delete %><% end %>
+</p>
+<div class="panel">
+	<p><strong>Name:</strong> <%= @expense.name %></p>
+	<p><strong>Vendor:</strong> <%= link_to @expense.vendor do %><%= @expense.vendor.name %><% end %></p>
+	<p><strong>Date:</strong> <%= @expense.date %></p>
+	<p><strong>Cost:</strong> <span class="currency"><%= number_to_currency(@expense.cost, { :negative_format => '(%n)' }) %></span></p>
+	<p><strong>Account:</strong> <%= @expense.account %></p>
+	<% if !@expense.notes.empty? %><p><strong>Notes:</strong> <%= @expense.notes %></p><% end %>
+</div>
