--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Invoices | ') %>
+<% provide(:title, 'Invoices') %>
 <section id="invoices-list">
 	<div class="container">
 		<div class="row">
@@ -11,7 +11,7 @@
 						<% if Invoice.notable.blank? %>
 						<p class="lead">No invoices.</p>
 						<% else %>
-						<table class="table table-hover table-striped table-condensed">
+						<table>
 							<thead>
 								<tr>
 									<th>Client</th>
