--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Invoice #{@invoice.display_id} | ") %>
+<% provide(:title, "Invoice #{@invoice.display_id}") %>
 <section id="invoice-show">
 	<div class="container">
 		<div class="row">
