--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,46 +1,46 @@
 <nav>
 	<ul class="menu-main">
 		<li<% if controller_name == 'welcome' and action_name == 'index' %> class="active"<% end %>>
-			<%= link_to root_path, { class: (controller_name == 'welcome' and action_name == 'index' ? 'active': '') } do %><i class="fas fa-fw fa-home"></i>Home</a><% end %>
+			<%= link_to root_path, { class: (controller_name == 'welcome' and action_name == 'index' ? 'active': '') } do %><%= icon('fas', 'home', class: 'fa-fw') %>Home</a><% end %>
 		</li>
 		<li<% if controller_name == 'clients' %> class="active"<% end %>>
-			<%= link_to clients_path, { class: (controller_name == 'clients' and action_name == 'index' and (!request.params.include? 'inactive' or !request.params['inactive'] == 'true') ? 'active' : '') } do %><i class="fas fa-fw fa-user"></i>Clients<% end %>
+			<%= link_to clients_path, { class: ((controller_name == 'clients' and ['index', 'show', 'edit'].include? action_name) ? 'active' : '') } do %><%= icon('fas', 'user', class: 'fa-fw') %>Clients<% end %>
 			<% if controller_name == 'clients' %>
 			<ul class="menu-sub">
-				<li><%= link_to new_client_path, { class: (controller_name == 'clients' and action_name == 'new' ? 'active': '') } do %><i class="fas fa-fw"></i>New<% end %></li>
+				<li><%= link_to new_client_path, { class: (controller_name == 'clients' and action_name == 'new' ? 'active': '') } do %><%= icon('fas', '', class: 'fa-fw') %>New<% end %></li>
 			</ul>
 			<% end %>
 		</li>
 		<li<% if controller_name == 'invoices' %> class="active"<% end %>>
-			<%= link_to invoices_path, { class: (controller_name == 'invoices' and action_name == 'index' ? 'active' : '') } do %><i class="fas fa-fw fa-dollar-sign"></i>Invoices<% end %>
+			<%= link_to invoices_path, { class: (controller_name == 'invoices' and action_name == 'index' ? 'active' : '') } do %><%= icon('fas', 'dollar-sign', class: 'fa-fw') %>Invoices<% end %>
 			<% if controller_name == 'invoices' %>
 			<ul class="menu-sub">
-				<li><%= link_to new_invoice_path, { class: (controller_name == 'invoices' and action_name == 'new' ? 'active': '') } do %><i class="fas fa-fw"></i>New<% end %></li>
-				<li><%= link_to time_path, { class: (controller_name == 'invoices' and action_name == 'time' ? 'active' : '') } do %><i class="fas fa-fw"></i>Time<% end %></li>
+				<li><%= link_to new_invoice_path, { class: (controller_name == 'invoices' and action_name == 'new' ? 'active': '') } do %><%= icon('fas', '', class: 'fa-fw') %>New<% end %></li>
+				<li><%= link_to time_path, { class: (controller_name == 'invoices' and action_name == 'time' ? 'active' : '') } do %><%= icon('fas', '', class: 'fa-fw') %>Time<% end %></li>
 			</ul>
 			<% end %>
 		</li>
 		<li<% if controller_name == 'vendors' %> class="active"<% end %>>
-			<%= link_to vendors_path, { class: (controller_name == 'vendors' and action_name == 'index' ? 'active' : '') } do %><i class="far fa-fw fa-building"></i>Vendors<% end %>
+			<%= link_to vendors_path, { class: (controller_name == 'vendors' and action_name == 'index' ? 'active' : '') } do %><%= icon('far', 'building', class: 'fa-fw') %>Vendors<% end %>
 			<% if controller_name == 'vendors' %>
 			<ul class="menu-sub">
-				<li><%= link_to new_vendor_path, { class: (controller_name == 'vendors' and action_name == 'new' ? 'active': '') } do %><i class="fas fa-fw"></i>New<% end %></li>
+				<li><%= link_to new_vendor_path, { class: (controller_name == 'vendors' and action_name == 'new' ? 'active': '') } do %><%= icon('fas', '', class: 'fa-fw') %>New<% end %></li>
 			</ul>
 			<% end %>
 		</li>
 		<li<% if controller_name == 'expenses' %> class="active"<% end %>>
-			<%= link_to expenses_path, { class: (controller_name == 'expenses' and action_name == 'index' ? 'active' : '') } do %><i class="far fa-fw fa-credit-card"></i>Expenses<% end %>
+			<%= link_to expenses_path, { class: (controller_name == 'expenses' and action_name == 'index' ? 'active' : '') } do %><%= icon('far', 'credit-card', class: 'fa-fw') %>Expenses<% end %>
 			<% if controller_name == 'expenses' %>
 			<ul class="menu-sub">
-				<li><%= link_to new_expense_path, { class: (controller_name == 'expenses' and action_name == 'new' ? 'active': '') } do %><i class="fas fa-fw"></i>New<% end %></li>
+				<li><%= link_to new_expense_path, { class: (controller_name == 'expenses' and action_name == 'new' ? 'active': '') } do %><%= icon('fas', '', class: 'fa-fw') %>New<% end %></li>
 			</ul>
 			<% end %>
 		</li>
 		<li<% if controller_name == 'years' %> class="active"<% end %>>
-			<%= link_to years_path, { class: (controller_name == 'years' and action_name == 'index' ? 'active' : '') } do %><i class="far fa-fw fa-calendar-alt"></i>Years<% end %>
+			<%= link_to years_path, { class: (controller_name == 'years' and action_name == 'index' ? 'active' : '') } do %><%= icon('far', 'calendar-alt', class: 'fa-fw') %>Years<% end %>
 			<% if controller_name == 'years' %>
 			<ul class="menu-sub">
-				<li><%= link_to new_year_path, { class: (controller_name == 'years' and action_name == 'new' ? 'active': '') } do %><i class="fas fa-fw"></i>New<% end %></li>
+				<li><%= link_to new_year_path, { class: (controller_name == 'years' and action_name == 'new' ? 'active': '') } do %><%= icon('fas', '', class: 'fa-fw') %>New<% end %></li>
 			</ul>
 			<% end %>
 		</li>
