--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <% provide(:title, 'Dashboard') %>
-<h1><i class="fas fa-fw fa-home left"></i>Dashboard</h1>
+<h1><%= icon('fas', 'home', class: 'fa-fw left') %>Dashboard</h1>
 <%= render 'layouts/financialdash' %>
