--- a/app/views/welcome/stripe.html.erb
+++ b/app/views/welcome/stripe.html.erb
@@ -4,7 +4,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h2>Stripe Payouts</h2>
-				<table class="table table-hover table-striped table-condensed">
+				<table>
 					<thead>
 						<tr>
 							<th>Date</th>
@@ -21,7 +21,7 @@
 					</tbody>
 				</table>
 				<h2>Invoices paid via Stripe</h2>
-				<table class="table table-hover table-striped table-condensed">
+				<table>
 					<thead>
 						<tr>
 							<th>Date</th>
