--- a/app/views/years/_tab-expenses.html.erb
+++ b/app/views/years/_tab-expenses.html.erb
@@ -13,7 +13,7 @@
 	</div>
 </div>
 <h3>By Vendor (to-date)</h3>
-<table class="table table-hover table-striped table-condensed">
+<table>
 	<thead>
 		<tr>
 			<th>Vendor</th>
@@ -36,7 +36,7 @@
 <% if @year.expenses.blank? %>
 <p class="lead">No to-date expenses in <%= @year.year %>.</p>
 <% else %>
-<table class="table table-hover table-striped table-condensed">
+<table>
 	<thead>
 		<tr>
 			<th>Date</th>
@@ -61,7 +61,7 @@
 <% if @year.expensesFuture.blank? %>
 <p class="lead">No future expenses in <%= @year.year %>.</p>
 <% else %>
-<table class="table table-hover table-striped table-condensed">
+<table>
 	<thead>
 		<tr>
 			<th>Date</th>
