--- a/app/views/years/_tab-income.html.erb
+++ b/app/views/years/_tab-income.html.erb
@@ -15,7 +15,7 @@
 		<% if @year.invoices.unpaid.blank? %>
 		<p class="lead">No unpaid invoices issued in <%= @year.year %>.</p>
 		<% else %>
-		<table class="table table-hover table-striped table-condensed">
+		<table>
 			<thead>
 				<tr>
 					<th>Client</th>
@@ -40,7 +40,7 @@
 		<p class="lead">No invoices were paid in <%= @year.year %>.</p>
 		<% else %>
 		<h3>Paid Invoices By Client</h3>
-		<table class="table table-hover table-striped table-condensed">
+		<table>
 			<thead>
 				<tr>
 					<th>Client</th>
@@ -61,7 +61,7 @@
 			</tbody>
 		</table>
 		<h3>All Paid Invoices</h3>
-		<table class="table table-hover table-striped table-condensed">
+		<table>
 			<thead>
 				<tr>
 					<th>Client</th>
