--- a/app/views/years/edit.html.erb
+++ b/app/views/years/edit.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, "Edit Year #{@year.year} | ") %>
+<% provide(:title, "Edit Year #{@year.year}") %>
 <section id="year-edit">
 	<div class="container">
 		<div class="row">
