--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,43 +1,33 @@
 <% provide(:title, 'Invoices') %>
-<section id="invoices-list">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>Invoices</h1>
-				<p><%= link_to new_invoice_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Invoice<% end %> <%= link_to time_url, { :class => 'btn btn-primary' } do %><%= icon('fas', 'clock', class: 'left') %>Raw Time<% end %></p>
-				<h2>Recent &amp; Unpaid Invoices</h2>
-				<div class="row">
-					<div class="col-sm-12">
-						<% if Invoice.notable.blank? %>
-						<p class="lead">No invoices.</p>
-						<% else %>
-						<table>
-							<thead>
-								<tr>
-									<th>Client</th>
-									<th>Date</th>
-									<th>&nbsp;</th>
-									<th class="text-right hidden-xs">Cost</th>
-									<th class="text-center">Paid?</th>
-								</tr>
-							</thead>
-							<tbody>
-								<% Invoice.notable.each do |invoice| %>
-								<tr id="invoicerow<%= invoice.id %>">
-									<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
-									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
-									<td class="currency text-right hidden-xs"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-									<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
-								</tr>
-								<% end %>
-							</tbody>
-						</table>
-						<% end %>
-					</div>
-				</div>
-				<%= render 'layouts/financialdash' %>
-			</div>
-		</div>
-	</div>
-</section>
+<h1><%= icon('fas', 'dollar-sign', class: 'fa-fw left') %>Invoices</h1>
+<p><%= link_to new_invoice_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Invoice<% end %> <%= link_to time_url, { :class => 'btn btn-primary' } do %><%= icon('fas', 'clock', class: 'left') %>Raw Time<% end %></p>
+<div class="panel">
+	<h2>Recent &amp; Unpaid Invoices</h2>
+	<% if Invoice.notable.blank? %>
+	<p class="lead">No invoices.</p>
+	<% else %>
+	<table>
+		<thead>
+			<tr>
+				<th>Client</th>
+				<th>Date</th>
+				<th>&nbsp;</th>
+				<th class="text-right hidden-xs">Cost</th>
+				<th class="text-center">Paid?</th>
+			</tr>
+		</thead>
+		<tbody>
+			<% Invoice.notable.each do |invoice| %>
+			<tr id="invoicerow<%= invoice.id %>">
+				<td><%= link_to Client.find(invoice.client_id) do %><%= Client.find(invoice.client_id).name %><% end %></td>
+				<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
+				<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
+				<td class="currency text-right hidden-xs"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
+				<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
+	<% end %>
+	<%= render 'layouts/financialdash' %>
+</div>
