--- a/app/views/invoices/new.html.erb
+++ b/app/views/invoices/new.html.erb
@@ -1,12 +1,3 @@
 <% provide(:title, 'New Invoice') %>
-<section id="invoice-new">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>New Invoice</h1>
-				<%= render 'form' %>
-				<p><%= link_to 'Back', invoices_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+<h1><%= icon('fas', 'dollar-sign', class: 'fa-fw left') %>New Invoice</h1>
+<%= render 'form' %>
