--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -1,76 +1,63 @@
 <% provide(:title, "Invoice #{@invoice.display_id}") %>
-<section id="invoice-show">
-	<div class="container">
-		<div class="row">
-			<div class="<% if @clientView %>col-md-8 col-md-offset-2<% else %>col-sm-12<% end %>">
-
-				<% if @invoice.client.logo.present? %>
-				<%= image_tag(@invoice.client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
-				<% end %>
-
-				<% if user_signed_in? and !@clientView %>
-				<h1>Invoice #<%= @invoice.id %></h1>
-				<p class="doicons">
-					<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><%= icon('fas', 'file', class: 'fa-fw fa-2x text-success') %><% end %>
-					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><%= icon_action_edit %><% end %>
-					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><%= icon_action_delete %><% end %>
-					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><%= icon('far', 'envelope-open', class: 'fa-fw fa-2x text-success') %><% end %>
-					<% if !@invoice.paid? %><%= link_to mark_paid_invoice_path(@invoice), id: 'paid-today-btn', title: 'Paid Today?', class: 'btn btn-sm btn-warning', remote: true do %>Paid Today?<% end %><% end %>
-				</p>
-				<% if @invoice.access_token.present? %>
-				<p>
-					<strong>Access Token:</strong> <%= @invoice.access_token %> (<a href="<%= invoice_path(@invoice) %>?access_token=<%= @invoice.access_token %>">Client Link</a>)
-				</p>
-				<% end %>
-				<% if @invoice.mail_sends.present? %>
-				<p>
-					<strong>Email(s) sent:</strong>
-					<% @invoice.mail_sends.each do |mail_send| %>
-						<br><%= mail_send.strftime('%B %e, %Y @ %l:%M %P') %>
-					<% end %>
-				</p>
-				<% end %>
-				<% end %>
-				<% if @invoice.paid == true and !user_signed_in? %>
-				<p><%= link_to invoice_path(:format => 'pdf', :access_token => @invoice.access_token), { :target => '_blank' } do %>Download Invoice marked 'PAID'<% end %></p>
-				<% end %>
-				<p>
-					<strong>Client:</strong>
-					<% if user_signed_in? %><%= link_to @invoice.client do %><%= @invoice.client.name %><% end %><% else %><%= @invoice.client.name %><% end %>
-				</p>
-				<p>
-					<strong>Invoice ID<% if user_signed_in? %> Display<% end %>:</strong>
-					<%= @invoice.display_id %>
-				</p>
-				<p>
-					<strong>Date Issued:</strong>
-					<%= @invoice.date.to_formatted_s(:long) %>
-				</p>
-				<p>
-					<% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %> <span class="spread green">Paid</span> on
-					<%= @invoice.paiddate.to_formatted_s(:long) %><% else %><%= icon('fas', 'exclamation', class: 'red') %> <span class="spread red">Not Paid</span><% end %>
-				</p>
-				<% if !@invoice.paymenttype.blank? %>
-				<p>
-					<strong>Payment Method:</strong>
-					<%= @invoice.paymenttype %>
-				</p>
-				<% end %>
-				<p><strong>Description:</strong></p>
-				<p><%= @invoice.description %></p>
-				<%= render 'line-items-table' %>
-				<% if user_signed_in? and !@invoice.paid and !@clientView %>
-				<h2>Add a line:</h2>
-				<%= render 'lines/form' %>
-				<div class="row hidden-print">
-					<div class="col-sm-12">
-						<p><%= link_to 'Back', invoices_path %></p>
-					</div>
-				</div>
-				<% else %>
-					<%= render 'payment-options' %>
-				<% end %>
-			</div>
-		</div>
-	</div>
-</section>
+<% if @invoice.client.logo.present? %>
+<%= image_tag(@invoice.client.logo.url(), class: 'client-logo pull-right hidden-xs') %>
+<% end %>
+<% if user_signed_in? and !@clientView %>
+<h1><%= icon('fas', 'dollar-sign', class: 'fa-fw left') %>Invoice #<%= @invoice.id %></h1>
+<p class="doicons">
+	<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><%= icon('fas', 'file', class: 'fa-fw fa-2x text-success') %><% end %>
+	<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><%= icon_action_edit %><% end %>
+	<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><%= icon_action_delete %><% end %>
+	<%= link_to email_invoice_path(@invoice), title: 'Send' do %><%= icon('far', 'envelope-open', class: 'fa-fw fa-2x text-success') %><% end %>
+	<% if !@invoice.paid? %><%= link_to mark_paid_invoice_path(@invoice), id: 'paid-today-btn', title: 'Paid Today?', class: 'btn btn-sm btn-warning', remote: true do %>Paid Today?<% end %><% end %>
+</p>
+<div class="panel">
+	<% if @invoice.access_token.present? %>
+	<p>
+		<strong>Access Token:</strong> <%= @invoice.access_token %> (<a href="<%= invoice_path(@invoice) %>?access_token=<%= @invoice.access_token %>">Client Link</a>)
+	</p>
+	<% end %>
+	<% if @invoice.mail_sends.present? %>
+	<p>
+		<strong>Email(s) sent:</strong>
+		<% @invoice.mail_sends.each do |mail_send| %>
+			<br><%= mail_send.strftime('%B %e, %Y @ %l:%M %P') %>
+		<% end %>
+	</p>
+	<% end %>
+	<% end %>
+	<% if @invoice.paid == true and !user_signed_in? %>
+	<p><%= link_to invoice_path(:format => 'pdf', :access_token => @invoice.access_token), { :target => '_blank' } do %>Download Invoice marked 'PAID'<% end %></p>
+	<% end %>
+	<p>
+		<strong>Client:</strong>
+		<% if user_signed_in? %><%= link_to @invoice.client do %><%= @invoice.client.name %><% end %><% else %><%= @invoice.client.name %><% end %>
+	</p>
+	<p>
+		<strong>Invoice ID<% if user_signed_in? %> Display<% end %>:</strong>
+		<%= @invoice.display_id %>
+	</p>
+	<p>
+		<strong>Date Issued:</strong>
+		<%= @invoice.date.to_formatted_s(:long) %>
+	</p>
+	<p>
+		<% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %> <span class="spread green">Paid</span> on
+		<%= @invoice.paiddate.to_formatted_s(:long) %><% else %><%= icon('fas', 'exclamation', class: 'red') %> <span class="spread red">Not Paid</span><% end %>
+	</p>
+	<% if !@invoice.paymenttype.blank? %>
+	<p>
+		<strong>Payment Method:</strong>
+		<%= @invoice.paymenttype %>
+	</p>
+	<% end %>
+	<p><strong>Description:</strong></p>
+	<p><%= @invoice.description %></p>
+	<%= render 'line-items-table' %>
+	<% if user_signed_in? and !@invoice.paid and !@clientView %>
+	<h2>Add a line:</h2>
+	<%= render 'lines/form' %>
+	<% else %>
+	<%= render 'payment-options' %>
+	<% end %>
+</div>
