--- a/app/views/time/index.html.erb
+++ b/app/views/time/index.html.erb
@@ -5,7 +5,7 @@
 			<div class="col-sm-12">
 				<h1>Time</h1>
 				<h3>Client Summary</h3>
-				<table class="table table-hover table-striped">
+				<table>
 					<thead>
 						<tr>
 							<th>Client</th>
@@ -25,7 +25,7 @@
 					</tbody>
 				</table>
 				<h3>Raw Logs</h3>
-				<table class="table table-hover table-striped">
+				<table>
 					<thead>
 						<tr>
 							<th>Client</th>
