--- a/app/views/years/new.html.erb
+++ b/app/views/years/new.html.erb
@@ -1,12 +1,3 @@
 <% provide(:title, 'New Year') %>
-<section id="year-new">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12">
-				<h1>New Year</h1>
-				<%= render 'form' %>
-				<p><%= link_to 'Back', years_path %></p>
-			</div>
-		</div>
-	</div>
-</section>
+<h1><%= icon('far', 'calendar-alt', class: 'fa-fw left') %>New Year</h1>
+<%= render 'form' %>
