--- a/app/assets/stylesheets/partials/_nav.scss
+++ b/app/assets/stylesheets/partials/_nav.scss
@@ -23,7 +23,13 @@ nav {
 
 			&.active,
 			&:hover {
+
 				background: $white;
+
+				a.new {
+					display: block;
+				}
+
 			}
 
 			&.active {
@@ -65,6 +71,22 @@ nav {
 					left: 0px;
 					width: 0.25rem;
 					background: $color-primary;
+				}
+
+				&.new {
+
+					display: none;
+					position: absolute;
+					right: 0.75rem;
+					top: 1.25rem;
+					transform: translate(0px, -50%);
+					padding: 0px;
+
+					&:before {
+						content: '';
+						display: none;
+
+					}
 				}
 
 			}
